name:                aadr2doi
version:             0.0.1.0
synopsis:            A package to get DOIs from AADR publication keys
homepage:            https://github.com/nevrome/aadr2doi
category:            Archaeoinformatics
author:              Clemens Schmid
maintainer:          clemens@nevrome.de
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

source-repository head
    type:               git
    location:           https://github.com/nevrome/aadr2doi.git

executable aadr2doi
    main-is:
      Main-aadr2doi.hs
    hs-source-dirs:
      src-executables
    build-depends:
        base
      , optparse-applicative >= 0.16 && < 0.18
      , filepath
      , http-client
      , http-client-tls
      , bytestring
      , regex-tdfa
      , unordered-containers
      , utf8-string
    other-modules:
      Paths_aadr2doi
    default-language:
      Haskell2010
    ghc-options: 
      -threaded -with-rtsopts=-N
